--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container container-flex">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -51,10 +54,10 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="headlines-section">
+      <!-- <section class="headlines-section">
         <h1 class="first-headlines">Effective Solution for Your Business</h1>
         <button data-modal-open class="btn" type="button">Order Service</button>
         <div data-modal class="backdrop is-hidden">
@@ -143,7 +146,7 @@
                       <use href="./images/symbol-defs.svg#icon-vector"></use>
                     </svg>
                   </span>
-                  <span>I accept the terms and conditions of the</span>
+                  <span>I accept the terms and conditions of the&nbsp;</span>
                   <a class="link-privacy" href="#">Privacy Policy</a>
                 </label>
               </div>
@@ -152,9 +155,9 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="our-team-section">
+      <!-- <section class="our-team-section">
         <div class="container">
           <h2 class="visually-hidden">Our Skills</h2>
 
@@ -209,8 +212,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="our-work">
+      </section> -->
+      <!-- <section class="our-work">
         <div class="container">
           <h2 class="working">What are we doing</h2>
           <ul class="card-list-index list">
@@ -229,12 +232,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="our-stuff-section">
         <div class="container">
           <h2 class="our-work work">Our Team</h2>
           <ul class="our-team list">
-            <li>
+            <li class="li-mob">
               <img
                 src="./images/marguerrero.jpg"
                 alt="Mark Guerrero"
@@ -282,7 +285,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="li-mob">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
               <div class="name-stuff">
                 <h3 class="our-stuff">Tom Ford</h3>
@@ -325,7 +328,7 @@
                 </ul>
               </div>
             </li>
-            <li>
+            <li class="li-mob">
               <img
                 src="./images/camilagarcia.jpg"
                 alt="Camila Garcia"
@@ -372,7 +375,7 @@
                 </ul>
               </div>
             </li>
-            <li>
+            <li class="li-mob">
               <img
                 src="./images/danielwilson.jpg"
                 alt="Daniel Wilson"
@@ -422,7 +425,7 @@
           </ul>
         </div>
       </section>
-      <section class="customers-section">
+      <section class="customers-section"> 
         <div class="container">
           <h2 class="customers-headline">Customers</h2>
           <ul class="customers list">
@@ -472,7 +475,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container ftr">
         <div class="socaial-one">
           <a class="ftr-logo link" href="./index.html">
@@ -536,7 +539,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./modal.js"></script>
   </body>
 </html>
