--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header> -->
 
     <main>
-      <!-- <section class="headlines-section">
+      <section class="headlines-section">
         <h1 class="first-headlines">Effective Solution for Your Business</h1>
         <button data-modal-open class="btn" type="button">Order Service</button>
         <div data-modal class="backdrop is-hidden">
@@ -155,7 +155,7 @@
             </form>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="our-team-section">
         <div class="container">
@@ -213,7 +213,7 @@
           </ul>
         </div>
       </section> -->
-      <!-- <section class="our-work">
+        <section class="our-work">
         <div class="container">
           <h2 class="working">What are we doing</h2>
           <ul class="card-list-index list">
@@ -232,7 +232,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="our-stuff-section">
         <div class="container">
           <h2 class="our-work work">Our Team</h2>
