--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
 
-      <!-- <section class="our-team-section">
+      <section class="our-team-section">
         <div class="container">
           <h2 class="visually-hidden">Our Skills</h2>
 
@@ -212,7 +212,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
         <section class="our-work">
         <div class="container">
           <h2 class="working">What are we doing</h2>
@@ -235,7 +235,7 @@
       </section>
       <section class="our-stuff-section">
         <div class="container">
-          <h2 class="our-work work">Our Team</h2>
+          <h2 class="work">Our Team</h2>
           <ul class="our-team list">
             <li class="li-mob">
               <img
