--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container container-flex">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -42,19 +42,31 @@
           </ul>
         </nav>
         <ul class="contacts-list list">
-          <li>
+          <li class="item-cont">
             <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item-cont">
             <a class="header-tel link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
+        <button type="button" class="menu-open">
+        <svg class="menu-open-icon" width="32" height="22">
+          <use href="./images/symbol-defs.svg#menu-btn"></use>
+        </svg>
+        </button>
+        <div class="mob-menu">
+          <button type="button" class="menu-close">
+            <svg class="menu-close-icon" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-close-black"></use>
+            </svg>
+            </button>
+        </div>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <section class="headlines-section">
@@ -212,8 +224,8 @@
             </li>
           </ul>
         </div>
-      </section> 
-        <section class="our-work">
+      </section>
+      <section class="our-work">
         <div class="container">
           <h2 class="working">What are we doing</h2>
           <ul class="card-list-index list">
@@ -239,6 +251,10 @@
           <ul class="our-team list">
             <li class="li-mob">
               <img
+                srcset="
+                  ./images/marguerrero.jpg    1x,
+                  ./images/marguerrero-2x.jpg 2x
+                "
                 src="./images/marguerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -286,7 +302,12 @@
             </li>
 
             <li class="li-mob">
-              <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="./images/tomford.jpg 1x, ./images/tomford-2x.jpg 2x"
+                src="./images/tomford.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="name-stuff">
                 <h3 class="our-stuff">Tom Ford</h3>
                 <p class="pr">Frontend Developer</p>
@@ -330,6 +351,10 @@
             </li>
             <li class="li-mob">
               <img
+                srcset="
+                  ./images/camilagarcia.jpg    1x,
+                  ./images/camilagarcia-2x.jpg 2x
+                "
                 src="./images/camilagarcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -377,6 +402,10 @@
             </li>
             <li class="li-mob">
               <img
+                srcset="
+                  ./images/danielwilson.jpg    1x,
+                  ./images/danielwilson-2x.jpg 2x
+                "
                 src="./images/danielwilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -425,7 +454,7 @@
           </ul>
         </div>
       </section>
-      <section class="customers-section"> 
+      <section class="customers-section">
         <div class="container">
           <h2 class="customers-headline">Customers</h2>
           <ul class="customers list">
