--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+     <footer class="footer">
       <div class="container ftr">
         <div class="socaial-one">
           <a class="ftr-logo link" href="./index.html">
@@ -568,7 +568,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="./modal.js"></script>
   </body>
 </html>
