--- a/index.html
+++ b/index.html
@@ -54,16 +54,74 @@
           </li>
         </ul>
         <button type="button" class="menu-open">
-        <svg class="menu-open-icon" width="32" height="22">
-          <use href="./images/symbol-defs.svg#menu-btn"></use>
-        </svg>
+          <svg class="menu-open-icon" width="32" height="22">
+            <use href="./images/symbol-defs.svg#menu-btn"></use>
+          </svg>
         </button>
         <div class="mob-menu">
-          <button type="button" class="menu-close">
-            <svg class="menu-close-icon" width="8" height="8">
-              <use href="./images/symbol-defs.svg#icon-close-black"></use>
-            </svg>
+          <div class="container">
+            <button type="button" class="menu-close">
+              <svg class="menu-close-icon" width="8" height="8">
+                <use href="./images/symbol-defs.svg#icon-close-black"></use>
+              </svg>
             </button>
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link current" href="./index.html">Studio</a>
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="link curlink" href="">Contacts</a>
+              </li>
+            </ul>
+            <ul class="mob-menu-contacts-list list">
+              <li class="mob-menu-item-cont">
+                <a class="mob-menu-tel link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mob-menu-item-cont">
+                <a class="mob-menu-mail link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              
+            </ul>
+            <ul class="mob-soc-list list">
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">
+                  <svg class="mob-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">
+                  <svg class="mob-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">
+                  <svg class="mob-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">
+                  <svg class="mob-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -504,7 +562,7 @@
         </div>
       </section>
     </main>
-     <footer class="footer">
+    <footer class="footer">
       <div class="container ftr">
         <div class="socaial-one">
           <a class="ftr-logo link" href="./index.html">
