--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </li>
           </ul>
         </nav>
+
         <ul class="contacts-list list">
           <li class="item-cont">
             <a class="header-mail link" href="mailto:info@devstudio.com"
@@ -53,74 +54,80 @@
             >
           </li>
         </ul>
-        <button type="button" class="menu-open">
+
+        <button data-menu-open type="button" class="menu-open">
           <svg class="menu-open-icon" width="32" height="22">
             <use href="./images/symbol-defs.svg#menu-btn"></use>
           </svg>
         </button>
-        <div class="mob-menu">
+        <div class="mob-menu is-hidden" data-menu>
           <div class="container">
-            <button type="button" class="menu-close">
-              <svg class="menu-close-icon" width="8" height="8">
-                <use href="./images/symbol-defs.svg#icon-close-black"></use>
-              </svg>
-            </button>
-            <ul class="mob-menu-list list">
-              <li class="mob-menu-item">
-                <a class="mob-menu-link link current" href="./index.html">Studio</a>
-              </li>
-              <li class="mob-menu-item">
-                <a class="mob-menu-link link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="mob-menu-item">
-                <a class="link curlink" href="">Contacts</a>
-              </li>
-            </ul>
-            <ul class="mob-menu-contacts-list list">
-              <li class="mob-menu-item-cont">
-                <a class="mob-menu-tel link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-              <li class="mob-menu-item-cont">
-                <a class="mob-menu-mail link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              
-            </ul>
-            <ul class="mob-soc-list list">
-              <li class="mob-soc-item">
-                <a href="" class="mob-soc-link link">
-                  <svg class="mob-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-soc-item">
-                <a href="" class="mob-soc-link link">
-                  <svg class="mob-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-soc-item">
-                <a href="" class="mob-soc-link link">
-                  <svg class="mob-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-soc-item">
-                <a href="" class="mob-soc-link link">
-                  <svg class="mob-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="div1">
+              <button data-menu-close type="button" class="menu-close">
+                <svg class="menu-close-icon" width="8" height="8">
+                  <use href="./images/symbol-defs.svg#icon-close-black"></use>
+                </svg>
+              </button>
+              <ul class="mob-menu-list list">
+                <li class="mob-menu-item">
+                  <a class="mob-menu-link link current" href="./index.html"
+                    >Studio</a
+                  >
+                </li>
+                <li class="mob-menu-item">
+                  <a class="mob-menu-link link" href="./portfolio.html"
+                    >Portfolio</a
+                  >
+                </li>
+                <li class="mob-menu-item">
+                  <a class="link curlink" href="">Contacts</a>
+                </li>
+              </ul>
+            </div>
+            <div class="div2">
+              <ul class="mob-menu-contacts-list list">
+                <li class="mob-menu-item-cont">
+                  <a class="mob-menu-tel link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mob-menu-item-cont">
+                  <a class="mob-menu-mail link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mob-soc-list list">
+                <li class="mob-soc-item">
+                  <a href="" class="mob-soc-link link">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-soc-item">
+                  <a href="" class="mob-soc-link link">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-soc-item">
+                  <a href="" class="mob-soc-link link">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-soc-item">
+                  <a href="" class="mob-soc-link link">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -564,50 +571,52 @@
     </main>
     <footer class="footer">
       <div class="container ftr">
-        <div class="socaial-one">
-          <a class="ftr-logo link" href="./index.html">
-            <span class="logo-web">Web</span>
-            <span class="logo-studio logo-studio-footer">Studio</span></a
-          >
+        <div class="soc-tab">
+          <div class="social-one">
+            <a class="ftr-logo link" href="./index.html">
+              <span class="logo-web">Web</span>
+              <span class="logo-studio logo-studio-footer">Studio</span></a
+            >
 
-          <p class="footer-content">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+            <p class="footer-content">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
 
-        <div class="socaial-two">
-          <span class="social-media">Social media</span>
-          <ul class="ftr-soc-list list">
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="social-two">
+            <span class="social-media">Social media</span>
+            <ul class="ftr-soc-list list">
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="div4">
           <form>
@@ -628,5 +637,6 @@
       </div>
     </footer>
     <script src="./modal.js"></script>
+    <script src="./menu.js"></script>
   </body>
 </html>
