--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
           </ul>
         </nav>
 
-        <ul class="contacts-list list">
-          <li class="item-cont">
-            <a class="header-mail link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="item-cont">
-            <a class="header-tel link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
+        <!-- <div class="div-tab-cont"> -->
+          <ul class="contacts-list list">
+            <li class="item-cont">
+              <a class="header-mail link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item-cont">
+              <a class="header-tel link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        <!-- </div> -->
 
         <button data-menu-open type="button" class="menu-open">
           <svg class="menu-open-icon" width="32" height="22">
@@ -70,7 +72,7 @@
               </button>
               <ul class="mob-menu-list list">
                 <li class="mob-menu-item">
-                  <a class="mob-menu-link link current" href="./index.html"
+                  <a class="mob-menu-link link curlink" href="./index.html"
                     >Studio</a
                   >
                 </li>
@@ -80,7 +82,7 @@
                   >
                 </li>
                 <li class="mob-menu-item">
-                  <a class="link curlink" href="">Contacts</a>
+                  <a class="link mob-menu-link" href="">Contacts</a>
                 </li>
               </ul>
             </div>
@@ -177,7 +179,7 @@
                     required
                   />
 
-                  <svg class="input-svg" width="12" height="12">
+                  <svg class="input-svg" width="13" height="13">
                     <use href="./images/symbol-defs.svg#icon-phone"></use>
                   </svg>
                 </div>
@@ -194,7 +196,7 @@
                     required
                   />
 
-                  <svg class="input-svg" width="12" height="12">
+                  <svg class="input-svg" width="15" height="13">
                     <use href="./images/symbol-defs.svg#icon-message"></use>
                   </svg>
                 </div>
