--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
     <header class="header">
@@ -30,10 +33,10 @@
 
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link current" href="./index.html">Studio</a>
+              <a class="header-link link " href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -71,12 +74,12 @@
               </button>
               <ul class="mob-menu-list list">
                 <li class="mob-menu-item">
-                  <a class="mob-menu-link link" href="./index.html"
+                  <a class="mob-menu-link link curlink" href="./index.html"
                     >Studio</a
                   >
                 </li>
                 <li class="mob-menu-item">
-                  <a class="mob-menu-link link curlink" href="./portfolio.html"
+                  <a class="mob-menu-link link" href="./portfolio.html"
                     >Portfolio</a
                   >
                 </li>
@@ -341,50 +344,68 @@
     </main>
     <footer class="footer">
       <div class="container ftr">
-        <div class="socaial-one">
-          <a class="ftr-logo link" href="./index.html">
-            <span class="logo-web">Web</span>
-            <span class="logo-studio logo-studio-footer">Studio</span></a
-          >
+        <div class="soc-tab">
+          <div class="social-one">
+            <a class="ftr-logo link" href="./index.html">
+              <span class="logo-web">Web</span>
+              <span class="logo-studio logo-studio-footer">Studio</span></a
+            >
 
-          <p class="footer-content">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+            <p class="footer-content">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+
+          <div class="social-two">
+            <span class="social-media">Social media</span>
+            <ul class="ftr-soc-list list">
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr-soc-item">
+                <a href="" class="ftr-soc-link link">
+                  <svg class="svg-ftr" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <div class="socaial-two">
-          <span class="social-media">Social media</span>
-          <ul class="ftr-soc-list list">
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="ftr-soc-item">
-              <a href="" class="ftr-soc-link link">
-                <svg class="svg-ftr" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="div4">
+          <form>
+            <label for="email-footer" class="sub-label">Subscribe</label>
+            <div class="form">
+              <input
+                type="email"
+                name="email-footer"
+                class="input-footer"
+                required
+                placeholder="E-mail"
+                id="email-footer"
+              />
+              <button type="submit" class="button-subscribe">Subscribe</button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
